--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "the 1859 robotics website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/1859W/1859/issues"
   },
-  "homepage": "https://github.com/1859W/1859#readme"
+  "homepage": "https://github.com/1859W/1859#readme",
+  "dependencies": {
+    "next": "^7.0.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
+  }
 }
