--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "dependencies": {
     "next": "^7.0.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
   }
 }
