--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "build-content": "node content/build.js",
     "build": "next build",
     "start": "next start",
     "export": "npm run build && next export"
