--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-transition-group": "^2.5.0"
+  },
+  "devDependencies": {
+    "showdown": "^1.9.0"
   }
 }
