--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build-content": "node content/build.js",
+    "build-content": "node content/build-blog.js && node content/build-teams.js",
     "build-site": "next build",
     "start": "next start",
     "export": "npm run build && next export",
